--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,17 +11,17 @@ categories = ["development-tools::cargo-plugins"]
 keywords = ["cargo", "wash", "cache", "plugin", "cli"]
 
 [dependencies]
-anyhow = "1.0.90"
-clap = { version = "4.5.20", features = ["derive"] }
-comfy-table = "7.1.1"
+anyhow = "1.0.95"
+clap = { version = "4.5.23", features = ["derive"] }
+comfy-table = "7.1.3"
 log = "0.4.22"
 rayon = "1.10.0"
 simplelog = "0.12.2"
 strum_macros = "0.26.4"
 
 [dev-dependencies]
-insta = { version = "1.40", features = ["json"] }
-anyhow = "1.0.90"
+insta = { version = "=1.40", features = ["json"] }
+anyhow = "1.0.95"
 
 
 [[bin]]
