--- a/deny.toml
+++ b/deny.toml
@@ -5,6 +5,6 @@ confidence-threshold = 0.93 # We want really high confidence when inferring lice
 allow = [
     "Apache-2.0",       # https://tldrlegal.com/license/apache-license-2.0-(apache-2.0)
     "MIT",              # https://tldrlegal.com/license/mit-license
-    "Unicode-DFS-2016", # https://spdx.org/licenses/Unicode-DFS-2016.html
+    "Unicode-3.0",      # https://spdx.org/licenses/Unicode-3.0.0.html
 ]
 exceptions = []
