--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ simplelog = "0.12.2"
 strum_macros = "0.26.4"
 
 [dev-dependencies]
-insta = { version = "=1.40", features = ["json"] }
+insta = { version = "1.41", features = ["json"] }
 anyhow = "1.0.95"
 
 
