--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,17 +11,17 @@ categories = ["development-tools::cargo-plugins"]
 keywords = ["cargo", "wash", "cache", "plugin", "cli"]
 
 [dependencies]
-anyhow = "1.0.95"
-clap = { version = "4.5.26", features = ["derive"] }
-comfy-table = "7.1.3"
-log = "0.4.22"
-rayon = "1.10.0"
-simplelog = "0.12.2"
-strum_macros = "0.26.4"
+anyhow = "1"
+clap = { version = "4.5", features = ["derive"] }
+comfy-table = "7.1"
+log = "0.4"
+rayon = "1"
+simplelog = "0.12"
+strum_macros = "0.26"
 
 [dev-dependencies]
 insta = { version = "1.42", features = ["json"] }
-anyhow = "1.0.95"
+anyhow = "1"
 
 
 [[bin]]
@@ -29,33 +29,49 @@ name = "cargo-wash"
 path = "src/main.rs"
 
 [lints.rust]
-unsafe_code = "forbid"
+unsafe_code = "deny"
 deprecated = "warn"
+elided_lifetimes_in_paths = "warn"
+future_incompatible = { level = "warn", priority = -1 }
+nonstandard_style = { level = "warn", priority = -1 }
+rust_2018_idioms = { level = "warn", priority = -1 }
+rust_2021_prelude_collisions = "warn"
+semicolon_in_expressions_from_macros = "warn"
+trivial_numeric_casts = "warn"
+unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
+unused_extern_crates = "warn"
+unused_import_braces = "warn"
+unused_lifetimes = "warn"
+trivial_casts = "allow"
+unused_qualifications = "allow"
+
+[lints.rustdoc]
+all = "warn"
+missing_crate_level_docs = "warn"
 
 [lints.clippy]
-cargo = { level = "warn", priority = -1 }
-complexity = { level = "warn", priority = -1 }
-correctness = { level = "warn", priority = -1 }
-nursery = { level = "warn", priority = -1 }
-pedantic = { level = "warn", priority = -1 }
-perf = { level = "warn", priority = -1 }
-restriction = { level = "warn", priority = -1 }
-style = { level = "warn", priority = -1 }
-suspicious = { level = "warn", priority = -1 }
-# Restriction allowed lints
-pattern_type_mismatch = "allow"
-question_mark_used = "allow"
-implicit_return = "allow"
-mod_module_files = "allow"
-missing_docs_in_private_items = "allow"
-std_instead_of_alloc = "allow"
-default_numeric_fallback = "allow"
-separated_literal_suffix = "allow"
-as_conversions = "allow"
-float_arithmetic = "allow"
-min_ident_chars = "allow"
-exit = "allow"
-single_call_fn = "allow"
-arbitrary_source_item_ordering = "allow"
-arithmetic_side_effects = "allow"
-else_if_without_else = "allow"
+all = "warn"
+correctness = "warn"
+suspicious = "warn"
+style = "warn"
+complexity = "warn"
+perf = "warn"
+pedantic = "warn"
+nursery = "warn"
+unwrap_used = "warn"
+expect_used = "warn"
+
+# Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
+absolute_paths = "warn"
+allow_attributes = "warn"
+allow_attributes_without_reason = "warn"
+assertions_on_result_states = "warn"
+create_dir = "warn"
+clone_on_ref_ptr = "warn"
+missing_assert_message = "warn"
+panic_in_result_fn = "warn"
+shadow_reuse = "warn"
+str_to_string = "warn"
+todo = "warn"
+unimplemented = "warn"
+wildcard_enum_match_arm = "warn"
