--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A tool to clean up your Cargo caches"
 repository = "https://github.com/bircni/cargo-wash"
 version = "0.2.4"
 authors = ["bircni"]
-edition = "2021"
+edition = "2024"
 license = "MIT"
 readme = "README.md"
 categories = ["development-tools::cargo-plugins"]
@@ -17,7 +17,7 @@ comfy-table = "7.1"
 log = "0.4"
 rayon = "1"
 simplelog = "0.12"
-strum_macros = "0.26"
+strum_macros = "0.27"
 
 [dev-dependencies]
 insta = { version = "1.42", features = ["json"] }
@@ -50,16 +50,14 @@ all = "warn"
 missing_crate_level_docs = "warn"
 
 [lints.clippy]
-all = "warn"
-correctness = "warn"
-suspicious = "warn"
-style = "warn"
-complexity = "warn"
-perf = "warn"
-pedantic = "warn"
-nursery = "warn"
-unwrap_used = "warn"
-expect_used = "warn"
+all = { level = "warn", priority = -1 }
+correctness = { level = "warn", priority = -1 }
+suspicious = { level = "warn", priority = -1 }
+style = { level = "warn", priority = -1 }
+complexity = { level = "warn", priority = -1 }
+perf = { level = "warn", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
 
 # Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
 absolute_paths = "warn"
@@ -68,10 +66,12 @@ allow_attributes_without_reason = "warn"
 assertions_on_result_states = "warn"
 create_dir = "warn"
 clone_on_ref_ptr = "warn"
+expect_used = "warn"
 missing_assert_message = "warn"
 panic_in_result_fn = "warn"
 shadow_reuse = "warn"
 str_to_string = "warn"
 todo = "warn"
 unimplemented = "warn"
+unwrap_used = "warn"
 wildcard_enum_match_arm = "warn"
