--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,6 @@ strum_macros = "0.27"
 
 [dev-dependencies]
 insta = { version = "1.42", features = ["json"] }
-anyhow = "1"
 
 
 [[bin]]
@@ -50,14 +49,16 @@ all = "warn"
 missing_crate_level_docs = "warn"
 
 [lints.clippy]
-all = { level = "warn", priority = -1 }
-correctness = { level = "warn", priority = -1 }
-suspicious = { level = "warn", priority = -1 }
-style = { level = "warn", priority = -1 }
-complexity = { level = "warn", priority = -1 }
-perf = { level = "warn", priority = -1 }
-pedantic = { level = "warn", priority = -1 }
-nursery = { level = "warn", priority = -1 }
+all = "warn"
+correctness = "warn"
+suspicious = "warn"
+style = "warn"
+complexity = "warn"
+perf = "warn"
+pedantic = "warn"
+nursery = "warn"
+unwrap_used = "warn"
+expect_used = "warn"
 
 # Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
 absolute_paths = "warn"
@@ -66,12 +67,10 @@ allow_attributes_without_reason = "warn"
 assertions_on_result_states = "warn"
 create_dir = "warn"
 clone_on_ref_ptr = "warn"
-expect_used = "warn"
 missing_assert_message = "warn"
 panic_in_result_fn = "warn"
 shadow_reuse = "warn"
 str_to_string = "warn"
 todo = "warn"
 unimplemented = "warn"
-unwrap_used = "warn"
 wildcard_enum_match_arm = "warn"
