--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ strum_macros = "0.27"
 
 [dev-dependencies]
 insta = { version = "1.43", features = ["json"] }
-
+tempfile = "3.20"
 
 [[bin]]
 name = "cargo-wash"
