--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,11 @@ anyhow = "1"
 clap = { version = "4.5", features = ["derive"] }
 comfy-table = "7.1"
 log = "0.4"
-parking_lot = "0.12.3"
+parking_lot = "0.12"
 rayon = "1"
 simplelog = "0.12"
 strum_macros = "0.27"
-
+update-available = "0.1.2"
 [dev-dependencies]
 insta = { version = "1.43", features = ["json"] }
 tempfile = "3.20"
