--- a/deny.toml
+++ b/deny.toml
@@ -3,8 +3,14 @@ version = 2
 private = { ignore = true }
 confidence-threshold = 0.93 # We want really high confidence when inferring licenses from text
 allow = [
-    "Apache-2.0",       # https://tldrlegal.com/license/apache-license-2.0-(apache-2.0)
-    "MIT",              # https://tldrlegal.com/license/mit-license
-    "Unicode-3.0",      # https://spdx.org/licenses/Unicode-3.0.0.html
+    "Apache-2.0",
+    "BSD-3-Clause",
+    "CDLA-Permissive-2.0",
+    "ISC",
+    "MIT",
+    "Unicode-3.0"
 ]
 exceptions = []
+
+[bans]
+multiple-versions = "allow"
