--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           lfs: true
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: 1.87
+          toolchain: stable
       - uses: Swatinem/rust-cache@v2
 
       - name: cargo build
@@ -37,7 +37,7 @@ jobs:
           lfs: true
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: 1.87
+          toolchain: stable
           components: rustfmt, clippy
       - uses: Swatinem/rust-cache@v2
 
@@ -70,7 +70,7 @@ jobs:
     steps:
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: 1.87
+          toolchain: stable
       - uses: actions/checkout@v4
       - uses: Swatinem/rust-cache@v2
       - run: cargo fetch
@@ -84,13 +84,17 @@ jobs:
       - uses: actions/checkout@v4
       - uses: crate-ci/typos@master
 
-  cargo-machete:
+  cargo-shear:
     runs-on: ubuntu-latest
     steps:
-      - uses: dtolnay/rust-toolchain@master
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Cargo Shear
+        uses: taiki-e/install-action@v2.48.7
         with:
-          toolchain: 1.87
-      - uses: Swatinem/rust-cache@v2
-      - uses: actions/checkout@v4
-      - name: Machete
-        uses: bnjbvr/cargo-machete@main
+          tool: cargo-shear@1.3.1
+
+      - name: Run Cargo Shear
+        run: |
+          cargo shear
