--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: 1.87
+          toolchain: stable
           override: true
 
       - name: Build cargo-wash
@@ -67,7 +67,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: 1.87
+          toolchain: stable
           target: ${{ matrix.target }}
           override: true
 
@@ -121,7 +121,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: 1.87
+          toolchain: stable
           override: true
 
       - name: Create Cargo.lock
